gitops/test/test/test/test9.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    choerodon.io/network-service-instances: instest212
  labels:
    choerodon.io/network: service
  name: svctest2sad
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP
