gitops/test/test/test/test1.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    choerodon.io/network-service-instances: instest1
  labels:
    choerodon.io/network: service
  name: svctest1
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations: {}
  labels:
    choerodon.io/network: ingress
  name: ingtest1
spec:
  rules:
  - host: devops-service1-front.staging.saas.hand-china.com
    http:
      paths:
      - backend:
          serviceName: svctest1
          servicePort: 8060
        path: /
